--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -4,4 +4,16 @@
 
 {% block content %}
     <h1>Tasks List</h1>
+    <br>
+    {% for task in tasks %}
+        <h3>Task: {{task.title}}</h3>
+        <p>{{task.description}}</p>
+        {% if task.is_complete %}
+            <p>Status: ✅</p>
+            {% else %}
+            <p>Status: ❌</p>
+        {% endif %}
+        <p>author: {{task.user}}</p>
+        ---------
+    {% endfor %}
 {% endblock content %}
