--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,6 +6,14 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
 </head>
 <body>
+    {% if user.is_authenticated %}
+        <a href="{% url 'account_logout' %}">Log out</a>
+        {% else %}
+        <a href="{% url 'account_signup' %}">Sign Up</a>
+        <span>|</span>
+        <a href="{% url 'account_login' %}">Log In</a>
+    {% endif %}
+    
     {% block content %}{% endblock content %}
 </body>
 </html>
