--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    Home page
-</body>
-</html>
+{% extends '_base.html' %}
+
+{% block page_title %}Home{% endblock page_title %}
+
+{% block content %}
+    <h1>Home page</h1>
+    <a href="{% url 'tasks_list' %}">tasks list</a>
+{% endblock content %}
