Add TaskUpdate and TaskCreare View

--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -11,5 +11,6 @@
         <p>Status: ✅</p>
         {% else %}
         <p>Status: ❌</p>
-{% endif %}
+    {% endif %}
+    <a href="{% url 'task_update' task.id %}">Edit</a>
 {% endblock content %}
