--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,7 +6,9 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
 </head>
 <body>
+    <a href="{% url 'tasks_list' %}">Tasks</a>
     {% if user.is_authenticated %}
+        <a href="{% url 'task_create' %}">add a task</a>
         <a href="{% url 'account_logout' %}">Log out</a>
         {% else %}
         <a href="{% url 'account_signup' %}">Sign Up</a>
